# fw-nrfconnect-zephyr

./: CMakeLists.txt  CODEOWNERS  Kconfig.zephyr
boards/arm/adafruit_feather_nrf52840/: adafruit_feather_nrf52840.dts
boards/arm/bl5340_dvk/: bl5340_dvk_cpuapp_common.dts
boards/arm/bt610/: bt610.dts
boards/arm/nrf52840_mdk/: nrf52840_mdk.dts
boards/arm/nrf52840dk_nrf52840/: nrf52840dk_nrf52840.dts
cmake/: extensions.cmake  partition_manager.cmake
cmake/app/: boilerplate.cmake
cmake/flash/: CMakeLists.txt
cmake/reports/: CMakeLists.txt
drivers/counter/: counter_nrfx_rtc.c
drivers/flash/: nrf_qspi_nor.c  soc_flash_nrf.c
dts/common/nordic/: nrf54h20.dtsi
include/logging/: log_core.h
include/storage/: flash_map.h
kernel/: banner.c
samples/: CMakeLists.txt
samples/bluetooth/hci_rpmsg/: Kconfig
samples/bluetooth/hci_rpmsg/src/: main.c
samples/bluetooth/peripheral_hr/: prj.conf
samples/boards/reel_board/mesh_badge/src/: reel_board.c
samples/drivers/soc_flash_nrf/: sample.yaml
samples/drivers/soc_flash_nrf/src/: main.c
samples/hello_world/: CMakeLists.txt  pm_static.yml  prj.conf  psp.hex
samples/hello_world/child_image/: mcuboot.conf
samples/mcuboot/: pm.yml  prj.conf
samples/subsys/fs/littlefs/src/: main.c
samples/subsys/mgmt/mcumgr/smp_svr/: prj.conf
samples/subsys/mgmt/mcumgr/smp_svr/child_image/: mcuboot.conf
samples/subsys/mgmt/mcumgr/smp_svr/src/: main.c
samples/subsys/nvs/src/: main.c
samples/subsys/settings/src/: main.c
samples/subsys/usb/mass/src/: main.c
scripts/: partition_manager.py
subsys/dfu/: Kconfig
(+28 files in other folders)
